--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
+  "type": "module",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@wdio/allure-reporter": "^9.0.4",
     "@wdio/cli": "^8.1.0",
     "@wdio/local-runner": "^8.1.0",
     "@wdio/mocha-framework": "^8.1.0",
-    "@wdio/spec-reporter": "^8.1.0"
+    "@wdio/spec-reporter": "^8.1.0",
+    "allure-commandline": "^2.30.0",
+    "dotenv": "^16.4.5"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio:google": "wdio run configs/wdio.google_pixel_3.conf.js",
+    "wdio:samsung": "wdio run configs/wdio.samsung_galaxy_a51.conf.js",
+    "allure:generate": "allure generate allure-results --clean",
+    "allure:open": "allure open"
   }
 }
